@@ -1,0 +1,2 @@
+# Settings for Elasticsearch indexer plugin
+# Format: key=value\n
